--- a/headings.html
+++ b/headings.html
@@ -4,8 +4,8 @@
         <title> Headings </title>
     </head>
     <body>
-        <h1>This is a heading</h1>
-        <h2>This is a smaler heading</h2>
-        <h6>Smallest heading</h6>
+        <h1> h1: This is a heading</h1>
+        <h2> h2: This is a smaler heading</h2>
+        <h6> h6: Smallest heading</h6>
     </body>
 </html>
