--- a/headings.html
+++ b/headings.html
@@ -7,5 +7,6 @@
         <h1> h1: This is a heading</h1>
         <h2> h2: This is a smaler heading</h2>
         <h6> h6: Smallest heading</h6>
+        This is a list of differen headings.
     </body>
 </html>
