empty file added and headings.html modified->confilict with remote git

--- a/headings.html
+++ b/headings.html
@@ -4,6 +4,7 @@
         <title> Headings </title>
     </head>
     <body>
+        New Change on fj-laptop
         <h1>This is a heading</h1>
         <h2>This is a smaler heading</h2>
         <h6>Smallest heading</h6>
