CS50 video 40:30s before CSS3

--- a/lists.html
+++ b/lists.html
@@ -16,5 +16,11 @@
             <li>Second Item</li>
             <li>Third Item</li>
         </ol>
+        A second Ordered List:
+        <ol>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ol>
     </body>
 </html>
