--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Hello! </title>
+        <title> Hello HEAD! </title>
     </head>
     <body>
         Hello, world!
